# board-games-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  api.paw  docker-compose.yml  main.py  manage.py  pyproject.toml
boardgamesbot/: asgi.py  settings.py  urls.py  wsgi.py
bot/: commands.py  models.py  tasks.py
bot/management/commands/: startbot.py
bot/migrations/: 0001_initial.py  0002_alter_chat_chat_id.py
gamebot/: asgi.py  settings.py  urls.py  wsgi.py
games/: bgg.py  commands.py  models.py
games/migrations/: 0001_initial.py  0002_alter_groupgame_chat_id_alter_play_chat_id.py  0002_alter_playscore_score.py  0003_alter_game_thumbnail.py  0003_usergame.py  0004_game_playingtime_game_suggested_players_game_type_and_more.py  0004_play_recorded_by.py  0005_alter_game_bgg_id_alter_groupgame_owned_by_and_more.py
locale/br/LC_MESSAGES/: django.po
locale/de/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/it/LC_MESSAGES/: django.po
media/: icon.afdesign
polls/: commands.py  models.py  tasks.py
polls/migrations/: 0001_initial.py  0002_alter_poll_answers.py  0002_remove_weeklypollanswer_user_name.py  0003_weeklypoll_alter_poll_pub_date.py  0003_weeklypoll_errors.py  0004_alter_weeklypoll_poll_date_alter_weeklypoll_weekday.py  0004_weeklypoll_active.py  0005_alter_weeklypoll_poll_date.py  0006_weeklypoll_poll_id.py  0007_alter_weeklypoll_poll_id.py  0008_weeklypollanswer.py  0009_remove_weeklypollanswer_user_and_more.py  0010_weeklypollanswer_user_name.py  0011_alter_weeklypollanswer_answer.py  0012_alter_weeklypollanswer_answer.py  0013_weeklypoll_language.py  0014_weeklypoll_question_prefix.py  0015_weeklypoll_answers.py  0016_alter_weeklypoll_language.py  0017_delete_poll.py
scheduler/: apps.py  jobs.py  tasks.py
surveys/: models.py
(+2 files in other folders)
