[tool.poetry]
name = "board-games-bot"
version = "1.1.3"
description = "Telegram BoardGames Bot"
authors = ["Marco <meskatech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.4"
python-telegram-bot = "20.0a0"
django-rq = "^3.0.0"
psycopg2-binary = "^2.9.3"
django-redis = "^5.4.0"
requests = "^2.27.1"
munch = "^2.5.0"
pendulum = "^3.0.0"
sentry-sdk = "^1.5.12"
toml = "^0.10.2"
xmltodict = "^0.13.0"
aiohttp = "^3.8.1"
python-dotenv = "^1.0.1"
rq = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
